--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,8 +1,47 @@
 {
   "nav": {
     "home": "Home",
+    "about": "About",
+    "experience": "Experience",
+    "projects": "Projects",
+    "contact": "Contact",
+    "resume": "Resume",
     "personalInfo": "Personal Information",
     "brand": "My Portfolio"
+  },
+  "hero": {
+    "intro": "Hi, my name is",
+    "name": "Antonio Ramos.",
+    "subtitle": "I build digital experiences for the web.",
+    "description": "I'm a frontend developer specialized in creating accessible, pixel-perfect digital experiences. Currently, I'm focused on building accessible and inclusive products at",
+    "company": "@MyCompany",
+    "cta": "Let's work together!"
+  },
+  "about": {
+    "title": "About me",
+    "number": "01.",
+    "paragraphs": {
+      "intro": "Hello! My name is Antonio and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together HTML & CSS taught me a lot about web development!",
+      "experience": "Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a digital product studio. My main focus these days is building accessible, inclusive products and digital experiences at a variety of companies.",
+      "technologies": "Here are a few technologies I've been working with recently:"
+    }
+  },
+  "experience": {
+    "title": "Where I've worked",
+    "number": "02."
+  },
+  "projects": {
+    "title": "Some things I've built",
+    "number": "03.",
+    "featured": "Featured Project",
+    "personal": "Personal Project"
+  },
+  "contact": {
+    "title": "What's Next?",
+    "number": "04.",
+    "heading": "Get In Touch",
+    "description": "Although I'm not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!",
+    "button": "Say Hello"
   },
   "home": {
     "title": "Home - My Personal Portfolio",
