fix: update project title in Spanish localization for consistency

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -103,7 +103,7 @@
     ]
   },
   "projects": {
-    "title": "Algunas cosas que he construido",
+    "title": "Mis proyectos",
     "number": "03.",
     "featured": "Proyecto Destacado",
     "personal": "Proyecto Personal"
